--- a/public/static/div.html
+++ b/public/static/div.html
@@ -8,6 +8,9 @@
 
 </head>
 <body>
+
+The word <bdi>مرحبا</bdi> means "Hello" in Arabic
+
 <div style="color: #00B83F ;position: absolute;left: 10px;">111</div>
 
 <div id="main" style="position: absolute;right: 10px; width: 600px;height:400px;">222</div>
