--- a/public/static/tenement.html
+++ b/public/static/tenement.html
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td>ip:</td>
-            <td><input type="text" name="ip" value="10.102.1.64" style="width:380px;"><br/>
+            <td><input type="text" name="ip" value="10.102.1.64"  placeholder="环境ip" style="width:380px;"><br/>
             </td>
         </tr>
         <tr>
@@ -26,8 +26,8 @@
             </td>
         </tr>
         <tr>
-            <td>tenementName:</td>
-            <td><input type="text" name="tenement" value="GuoXinLianCheng" style="width:380px;"><br/>
+            <td>tenementID:</td>
+            <td><input type="text" name="tenement" value="AQACk5HxFIbeDgAAcL7r9bpS7hRuCQAA" style="width:380px;"><br/>
             </td>
         </tr>
     </table>
